# pyside-widgets

./: README.md  project-structure.txt  pyproject.toml  pyside-widgets.code-workspace
src/: resources.qrc
src/examples/: run_qt_designer.py  widget_gallery.py
src/pyside_widgets/: __init__.py  _style_sheets.py  _utils.py  color_picker_button.py  command_bar.py  data_tree_widget.py  decimal_spin_box.py  enum_combo_box.py  grouped_combo_box.py  jupyter_console_widget.py  labeled_slider.py  message_box.py  overlay_widget.py  rc_resources.py  resources.qrc  setting_card_widget.py  toggle_switch.py
src/pyside_widgets/examples/: designer.py  run_qt_designer.py  widget_gallery.py
src/pyside_widgets/plugins/: composite_plugin.py  container_plugin.py  input_plugin.py  plugin_base.py  register_widgets.py  toolbar_plugin.py
src/pyside_widgets/registrars/: register_color_picker_button.py  register_command_bar.py  register_decimal_spin_box.py  register_enum_combo_box.py  register_overlay_widget.py  register_setting_card_widget.py  register_toggle_switch.py
tests/: test_data_tree_widget.py  test_grouped_combo_box.py  test_overlay_widget.py
