[project]
name = "pyside-widgets"
version = "0.1.0"
description = "Widgets created during the development of the Signal Viewer GUI."
readme = "README.md"
authors = [
    { name = "devduck", email = "frederik.kraemer@dev-duck.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "darkdetect>=0.8.0",
    "numpy>=2.4.4",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.11.0",
    "qtconsole>=5.7.2",
]

[project.scripts]
demo = "pyside_widgets.examples.widget_gallery:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


