[project]
name = "pyside-widgets"
version = "0.2.3.dev1"
description = "A collection of custom PySide6 widgets along with plugins for Qt Designer."
readme = "README.md"
authors = [
    { name = "devduck", email = "frederik.kraemer@dev-duck.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "darkdetect>=0.8.0",
    "numpy>=2.4.4",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.11.0",
    "qtconsole>=5.7.2",
]

[project.scripts]
demo = "pyside_widgets.examples.widget_gallery:main"
designer = "pyside_widgets.examples.designer:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


